--- a/boltspec.html
+++ b/boltspec.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>main</title>
+    <title>볼트규격</title>
     <link rel="stylesheet" href="main.css">
     <script>
       /* javascript 주석 */
@@ -10,7 +10,7 @@
     </script>
   </head>
   <body>
-    <h1><a href="index.html">LD's</a></h1>
+    <h1><a href="index.html">공공돌</a></h1>
     <div id="grid">
       <ol>
         <li><a href="HoleSize.html">탭 기초홀</a></li>
@@ -21,8 +21,7 @@
         <h2>Specification of Bolt</h2>
         <p margin-top:40px;>
           Hex socket head bolt<br>
-          <img src="
-          ">
+          <img src=" ">
         </p>
       </div>
     </div>
