--- a/HoleSize.html
+++ b/HoleSize.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>main</title>
+    <title>탭기초홀</title>
     <link rel="stylesheet" href="main.css">
     <script>
       /* javascript 주석 */
@@ -10,7 +10,7 @@
     </script>
   </head>
   <body>
-    <h1><a href="index.html">LD's</a></h1>
+    <h1><a href="index.html">공공돌</a></h1>
     <div id="grid">
       <ol>
         <li><a href="HoleSize.html" class="here">탭 기초홀</a></li>
@@ -20,8 +20,16 @@
       <div id="text">
         <h2>Drill size for tapping</h2>
         <p margin-top:40px;>
-          Base Hole for Metric Tap
-          <img src="drillfortap.jpg" width="100%">
+          Base Hole for Metric Tap<br>
+          <img src="drillfortap.jpg" alt="탭기초홀" style="width:100%, height:auto;" vspace="10px" hspace="10px">
+          <!--
+          WIDTH:폭, 넓이를 조정합니다.
+          HEIGHT:높이를 조정합니다.
+          VSPACE:이미지의 상하 여백을 조정합니다. <img scr="xxx.xxx" vspace="5"> 상단기준
+          HSPACE:이미지의 좌우 여백을 조정합니다. <img src="xxx.xxx" hspace="5"> 좌측기준
+          BORDER:이미지의 외곽선을 그려줍니다. <img src="xxx.xxx" border="5"> 이런식으로 지정해 주면 외곽선이 나타난다. 기본적으로 블랙 색상입니다.
+          ALIGN:이미지의 정렬을 말합니다. 기본적으로 왼쪽 정렬합니다. <align="right, left, center">로 표시한다.
+          -->
         </p>
       </div>
     </div>
