--- a/counter.html
+++ b/counter.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>main</title>
+    <title>자리파기</title>
     <link rel="stylesheet" href="main.css">
     <script>
       /* javascript 주석 */
@@ -10,7 +10,7 @@
     </script>
   </head>
   <body>
-    <h1><a href="index.html">LD's</a></h1>
+    <h1><a href="index.html">공공돌</a></h1>
     <div id="grid">
       <ol>
         <li><a href="HoleSize.html">탭 기초홀</a></li>
@@ -20,8 +20,8 @@
       <div id="text">
         <h2>Counterbore/Countersink/Spotface</h2>
         <p margin-top:40px;>
-          카운터보어/카운터싱크/스폿페이스
-          <img src="보링,싱킹,페이싱표.png" width="100%">
+          카운터보어/카운터싱크/스폿페이스<br>
+          <img src="보링,싱킹,페이싱표.png" alt="보링,싱킹,페이싱표" style="width:100%, height:auto;">
         </p>
       </div>
     </div>
