--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p margin-top:40px;>
           안녕하세요. WEB에 대한 공부와 3D CAD Modeling 관련된 공부를 시작하는 홈페이지 입니다.<br>
           egoing님의 생활 코딩 강좌를 수강하며, html CSS javascript에 대한 학습을 진행중입니다.<br>
-          앞으로 코딩에 대한 학습이 진행되는 대로 홈페이지를 제작하는 것을 해볼 예정입니다.
+          앞으로 코딩에 대한 학습이 진행되는 대로 홈페이지를 제작하는 것을 차차 진행해볼 예정입니다.
         </p>
       </div>
     </div>
