--- a/HoleSize.html
+++ b/HoleSize.html
@@ -16,6 +16,13 @@
         <li><a href="HoleSize.html" class="here">탭 기초홀</a></li>
         <li><a href="counter.html">자리파기 규격</a></li>
         <li><a href="boltspec.html">볼트규격</a></li>
+          <ul>
+            <li><a href="hexwrench.html">육각렌치볼트 규격</a></li>
+            <li><a href="hexbolt.html">육각볼트 규격</a></li>
+            <li><a href="buttonhead.html">둥근머리렌치볼트 규격</a></li>
+            <li><a href="flathead.html">접시머리렌치볼트 규격</a></li>
+            <li><a href="socketset.html">무두볼트 규격</a></li>
+          </ul>
       </ol>
       <div id="text">
         <h2>Drill size for tapping</h2>
