--- a/boltspec.html
+++ b/boltspec.html
@@ -16,12 +16,21 @@
         <li><a href="HoleSize.html">탭 기초홀</a></li>
         <li><a href="counter.html">자리파기 규격</a></li>
         <li><a href="boltspec.html" class="here">볼트규격</a></li>
+          <ul>
+            <li><a href="hexwrench.html">육각렌치볼트 규격</a></li>
+            <li><a href="hexbolt.html">육각볼트 규격</a></li>
+            <li><a href="buttonhead.html">둥근머리렌치볼트 규격</a></li>
+            <li><a href="flathead.html">접시머리렌치볼트 규격</a></li>
+            <li><a href="socketset.html">무두볼트 규격</a></li>
+          </ul>
       </ol>
       <div id="text">
         <h2>Specification of Bolt</h2>
         <p margin-top:40px;>
-          Hex socket head bolt<br>
-          <img src=" ">
+          each type of bolt name in english<br>
+          <img src="볼트영문(1).png" alt="볼트영문표기" style="width:100%, height:auto;"><br>
+          <img src="볼트영문(2).png" alt="볼트영문표기" style="width:100%, height:auto;"><br>
+          <img src="볼트영문(3).png" alt="볼트영문표기" style="width:100%, height:auto;">
         </p>
       </div>
     </div>
