--- a/hexbolt.html
+++ b/hexbolt.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>main</title>
+    <title>육각볼트</title>
     <link rel="stylesheet" href="main.css">
     <script>
       /* javascript 주석 */
@@ -18,18 +18,18 @@
         <li><a href="boltspec.html">볼트규격</a></li>
           <ul>
             <li><a href="hexwrench.html">육각렌치볼트 규격</a></li>
-            <li><a href="hexbolt.html">육각볼트 규격</a></li>
+            <li><a href="hexbolt.html" class="here">육각볼트 규격</a></li>
             <li><a href="buttonhead.html">둥근머리렌치볼트 규격</a></li>
             <li><a href="flathead.html">접시머리렌치볼트 규격</a></li>
             <li><a href="socketset.html">무두볼트 규격</a></li>
           </ul>
       </ol>
       <div id="text">
-        <h2>Welcome</h2>
+        <h2>specification of hex-bolt</h2>
         <p margin-top:40px;>
-          안녕하세요. WEB에 대한 공부와 3D CAD Modeling 관련된 공부를 시작하는 홈페이지 입니다.<br>
-          egoing님의 생활 코딩 강좌를 수강하며, html CSS javascript에 대한 학습을 진행중입니다.<br>
-          앞으로 코딩에 대한 학습이 진행되는 대로 홈페이지를 제작하는 것을 차차 진행해볼 예정입니다.
+          <img src="육각머리볼트 규격_(1).png" alt="육각볼트규격" style="width:100%, height:auto;"><br>
+          <img src="육각머리볼트 규격_(2).png" alt="육각볼트규격" style="width:100%, height:auto;">
+          <img src="육각머리볼트 규격_(3).png" alt="육각볼트규격" style="width:100%, height:auto;"><br>
         </p>
       </div>
     </div>
