--- a/boltspec.html
+++ b/boltspec.html
@@ -28,9 +28,9 @@
         <h2>Specification of Bolt</h2>
         <p margin-top:40px;>
           each type of bolt name in english<br>
-          <img src="볼트영문(1).png" alt="볼트영문표기" style="width:100%, height:auto;"><br>
-          <img src="볼트영문(2).png" alt="볼트영문표기" style="width:100%, height:auto;"><br>
-          <img src="볼트영문(3).png" alt="볼트영문표기" style="width:100%, height:auto;">
+          <img src="볼트영문(1).PNG" alt="볼트영문표기" style="width:100%, height:auto;"><br>
+          <img src="볼트영문(2).PNG" alt="볼트영문표기" style="width:100%, height:auto;"><br>
+          <img src="볼트영문(3).PNG" alt="볼트영문표기" style="width:100%, height:auto;">
         </p>
       </div>
     </div>
