--- a/cable.html
+++ b/cable.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>볼트규격</title>
+    <title>전선규격</title>
     <link rel="stylesheet" href="main.css">
     <script>
       /* javascript 주석 */
@@ -15,7 +15,7 @@
       <ol>
         <li><a href="HoleSize.html">탭 기초홀</a></li>
         <li><a href="counter.html">자리파기 규격</a></li>
-        <li><a href="boltspec.html" class="here">볼트규격</a></li>
+        <li><a href="boltspec.html">볼트규격</a></li>
           <ul>
             <li><a href="hexwrench.html">육각렌치볼트 규격</a></li>
             <li><a href="hexbolt.html">육각볼트 규격</a></li>
@@ -23,15 +23,13 @@
             <li><a href="flathead.html">접시머리렌치볼트 규격</a></li>
             <li><a href="socketset.html">무두볼트 규격</a></li>
           </ul>
-        <li><a href="cable.html">전선굵기별 허용전류</a></li>
+        <li><a href="cable.html" class="here">전선굵기별 허용전류</a></li>
       </ol>
       <div id="text">
-        <h2>Specification of Bolt</h2>
+        <h2>allowable current of wire thickness</h2>
         <p margin-top:40px;>
-          each type of bolt name in english<br>
-          <img src="볼트영문(1).png" alt="볼트영문표기" style="width:100%, height:auto;"><br>
-          <img src="볼트영문(2).png" alt="볼트영문표기" style="width:100%, height:auto;"><br>
-          <img src="볼트영문(3).png" alt="볼트영문표기" style="width:100%, height:auto;">
+          <img src="전선 굵기별 허용전류_편집.jpg" alt="전선 굵기별 허용전류" style="width:100%, height:auto;"><br>
+          출처 : https://ko.wikipedia.org/wiki/%EB%AF%B8%EA%B5%AD_%EC%A0%84%EC%84%A0_%EA%B7%9C%EA%B2%A9 - 위키피디아
         </p>
       </div>
     </div>
