--- a/socketset.html
+++ b/socketset.html
@@ -23,6 +23,7 @@
             <li><a href="flathead.html">접시머리렌치볼트 규격</a></li>
             <li><a href="socketset.html" class="here">무두볼트 규격</a></li>
           </ul>
+        <li><a href="cable.html">전선굵기별 허용전류</a></li>
       </ol>
       <div id="text">
         <h2>specification of hex socket set screw</h2>
