--- a/buttonhead.html
+++ b/buttonhead.html
@@ -20,9 +20,10 @@
             <li><a href="hexwrench.html">육각렌치볼트 규격</a></li>
             <li><a href="hexbolt.html">육각볼트 규격</a></li>
             <li><a href="buttonhead.html" class="here">둥근머리렌치볼트 규격</a></li>
-            <li><a href="flathead.html">접시머리렌치볼트 규격</a></li>
+            <li><a href="">접시머리렌치볼트 규격</a></li>
             <li><a href="socketset.html">무두볼트 규격</a></li>
           </ul>
+        <li><a href="cable.html">전선굵기별 허용전류</a></li>
       </ol>
       <div id="text">
         <h2>specification of hex socket button head cap screw</h2>
